fix(header): prevent desktop shift when menu hides scrollbar [MUTOBOTEAM-3663]

--- a/src/css/variablesCustom.css
+++ b/src/css/variablesCustom.css
@@ -237,6 +237,7 @@
   --search-input-webkit-search-cancel-button-background-image: url('data:image/svg+xml;utf8,<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M18 6L6 18" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M6 6L18 18" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>');
   --search-input-webkit-search-cancel-button-margin-right-mobile: 2em;
   --search-input-webkit-search-cancel-button-margin-right: 0.25em;
+  --scrollbar-gutter-desktop: stable;
   --select-background-color-focus-visible: var(--color);
   --select-background-color: transparent;
   --select-border-color-focus-visible: var(--color);
